[package]
name = "cvars"
version = "0.1.0"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
edition = "2018"
description = "Configuration variables for games"
homepage = "https://github.com/martin-t/cvars"
repository = "https://github.com/martin-t/cvars"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["configuration", "console", "debugging", "gamedev", "settings"]
categories = ["config", "command-line-interface", "development-tools::procedural-macro-helpers", "game-development", "rust-patterns"]
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[profile.dev]
opt-level = 1 # Can be changed without recompiling all deps

[profile.dev.package."*"]
# Optimize deps but not this crate itself.
# This can significantly improve performance (e.g. 7x speedup on some projects)
# and shouldn't meaningfully increase incremental compile times because deps only change rarely.
opt-level = 3
codegen-units = 1
debug = false

# https://doc.rust-lang.org/cargo/reference/profiles.html#build-dependencies
# The reference might be wrong - it says this affects proc macros but in my experience it doesn't.
[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
strum = "0.21.0"
strum_macros = "0.21.1"

[dependencies]
syn = { version = "1.0.74", features = ["extra-traits"] }
quote = "1.0.9"

[workspace]
members = ["cvars-console", "cvars-console-fyrox", "cvars-console-macroquad", "test-compile-time"]
