[workspace]
# The cvars-console-* crates are not part of the workspace because:
#   - They would share Cargo.lock which can cause conflicts.
#   - Opening the workspace would cause RA to automatically load them, slowing it down and creating a large target dir.
#     It would also require installing system-wide deps for the given engines and GUI toolkits.
#     This is especially important for first-time contributors who might only want to work on one subproject.
#
# The cvars-test-compile-time is also excluded to better simulate a standalone project using cvars
# and so we can change optimization settings in its Cargo.toml without affecting the rest.
#
# Note that .cargo/config.toml and rust-toolchain still apply to them.
members = ["cvars", "cvars-console", "cvars-macros"]
exclude = [
    "cvars-console-fyrox",
    "cvars-console-macroquad",
    "cvars-test-compile-time",
]

[profile.dev]
opt-level = 1 # Can be changed without recompiling all deps

[profile.dev.package."*"]
# Optimize deps but not this crate itself.
# This can significantly improve performance (e.g. 7x speedup on some projects)
# and shouldn't meaningfully increase incremental compile times because deps only change rarely.
opt-level = 3
codegen-units = 1
debug = false

# https://doc.rust-lang.org/cargo/reference/profiles.html#build-dependencies
# The reference might be wrong - it says this affects proc macros but in my experience it doesn't.
[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1
