[package]
name = "cvars-macros"
version = "0.1.0"
edition = "2021"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "Configuration variables for games - internal crate, use the main cvars crate instead"
homepage = "https://github.com/martin-t/cvars"
repository = "https://github.com/martin-t/cvars"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["configuration", "console", "debugging", "gamedev", "settings"]
categories = [
    "config",
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
    "game-development",
    "rust-patterns",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.74", features = ["extra-traits"] }
quote = "1.0.9"

[dev-dependencies]
cvars = { path = "../cvars" }
