[package]
name = "cvars-macros"
version = "0.2.1"
edition = "2021"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "Configuration variables for games - internal crate, use the main cvars crate instead"
homepage = "https://github.com/martin-t/cvars"
repository = "https://github.com/martin-t/cvars"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["configuration", "console", "debugging", "gamedev", "settings"]
categories = [
    "config",
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
    "game-development",
    "rust-patterns",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.9"
syn = { version = "2.0.2", features = ["extra-traits"] }

[dev-dependencies]
cvars = { path = "../cvars" }
