[package]
name = "cvars-macros"
version = "0.4.1"
edition = "2021"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "Configuration variables for games - internal crate, use the main cvars crate instead"
homepage = "https://github.com/martin-t/cvars"
repository = "https://github.com/martin-t/cvars"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["configuration", "console", "debugging", "gamedev", "settings"]
categories = [
    "config",
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
    "game-development",
    "rust-patterns",
]
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
#phf = { version = "0.11", features = ["macros"] }
proc-macro2 = "1.0.50"
quote = "1.0.9"
syn = { version = "2.0.16", features = ["extra-traits"] }

[dev-dependencies]
cvars = { path = "../cvars" }
strum = "0.25.0"
strum_macros = "0.25.0"
trybuild = { version = "1.0", features = ["diff"] }
