[package]
name = "cvars-test-compile-time"
version = "0.1.0"
edition = "2021"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "Configuration variables for games - internal crate"
homepage = "https://github.com/martin-t/cvars"
repository = "https://github.com/martin-t/cvars"
license = "AGPL-3.0-or-later"
readme = "../README.md"
publish = false

[profile.dev]
opt-level = 1 # Can be changed without recompiling all deps

[profile.dev.package."*"]
# Optimize deps but not this crate itself.
# This can significantly improve performance (e.g. 7x speedup on some projects)
# and shouldn't meaningfully increase incremental compile times because deps only change rarely.
opt-level = 3
codegen-units = 1
debug = false

# https://doc.rust-lang.org/cargo/reference/profiles.html#build-dependencies
# The reference might be wrong - it says this affects proc macros but in my experience it doesn't.
[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[features]
# Pick one of these to determine the method used to generate cvars
nomacro = []
derive-dummy = []
derive = []
fnlike = []
# Pick one of these to determine how many cvars to generate
cvars-100 = []
cvars-1000 = []
cvars-10000 = []

[dependencies]
cvars = { path = "../cvars" }
