[package]
name = "cvars"
version = "0.1.0"
edition = "2021"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "Configuration variables for games"
homepage = "https://github.com/martin-t/cvars"
repository = "https://github.com/martin-t/cvars"
license = "AGPL-3.0-or-later"
readme = "../README.md"
keywords = ["configuration", "console", "debugging", "gamedev", "settings"]
categories = [
    "config",
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
    "game-development",
    "rust-patterns",
]

[dependencies]
cvars-macros = { path = "../cvars-macros" }

[dev-dependencies]
strum = "0.21.0"
strum_macros = "0.24.3"
