[package]
name = "cvars"
version = "0.3.2"
edition = "2021"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "Configuration variables - a simple and ergonomic way to store and edit configuration at runtime"
homepage = "https://github.com/martin-t/cvars"
repository = "https://github.com/martin-t/cvars"
license = "AGPL-3.0-or-later"
readme = "../README.md"
keywords = ["configuration", "console", "debugging", "gamedev", "settings"]
categories = [
    "config",
    "command-line-interface",
    "development-tools::procedural-macro-helpers",
    "game-development",
    "rust-patterns",
]

[dependencies]
cvars-macros = { version = "0.2.0", path = "../cvars-macros" }

[dev-dependencies]
strum = "0.25.0"
strum_macros = "0.25.0"
